--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -44,16 +44,16 @@ services:
       - media:/app/media
     command: sh -c "python manage.py makemigrations &&
                     python manage.py migrate &&
-                    python manage.py collectstatic --no-input &&
-                    python manage.py loaddata media/base_db.json &&
-                    python manage.py loaddata media/countries.json &&
-                    python manage.py create_periodic_task_for_delete_reviews &&
-                    python manage.py create_cities &&
-                    python manage.py create_moderator_group &&
-                    python manage.py periodic_task_for_parse_cash_courses &&
-                    python manage.py createsuperuser --no-input &&
-                    python manage.py parse_reviews_selenium &&
                     uvicorn project.asgi:app --host 0.0.0.0"
+                    # python manage.py collectstatic --no-input &&
+                    # python manage.py loaddata media/base_db.json &&
+                    # python manage.py loaddata media/countries.json &&
+                    # python manage.py create_periodic_task_for_delete_reviews &&
+                    # python manage.py create_cities &&
+                    # python manage.py create_moderator_group &&
+                    # python manage.py periodic_task_for_parse_cash_courses &&
+                    # python manage.py createsuperuser --no-input &&
+                    # python manage.py parse_reviews_selenium &&
 
   nginx:
     build: ./nginx
@@ -82,6 +82,7 @@ services:
 
   celery_worker:
     build: .
+    pull_policy: build
     restart: on-failure
     command: sh -c 'celery -A project worker -l info -c 20 -Ofair'
     environment:
@@ -100,6 +101,7 @@ services:
 
   celery_beat:
     build: .
+    pull_policy: build
     restart: on-failure
     command: sh -c 'celery -A project beat -l INFO --scheduler django_celery_beat.schedulers:DatabaseScheduler'
     environment:
