feat: first version auth with jwt tokens, add field refresh_token to CustomUser model
BREAKING CHANGE: add sucure auth with JWT

--- a/django_fastapi/requirements.txt
+++ b/django_fastapi/requirements.txt
@@ -4,23 +4,27 @@ anyio==3.7.1
 asgiref==3.7.2
 async-timeout==4.0.3
 attrs==23.2.0
+bcrypt==4.1.2
 beautifulsoup4==4.12.2
 billiard==4.2.0
 bleach==6.1.0
 celery==5.3.5
 certifi==2023.7.22
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
 cron-descriptor==1.4.0
+cryptography==42.0.5
 Django==4.2.7
 django-celery-beat==2.5.0
 django-debug-toolbar==4.2.0
 django-dynamic-admin-forms==2.2.1
 django-summernote==0.8.20.0
 django-timezone-field==6.0.1
+ecdsa==0.18.0
 exceptiongroup==1.1.3
 fastapi==0.104.1
 flower==2.0.1
@@ -33,19 +37,25 @@ jsmin==3.0.1
 kombu==5.3.3
 lxml==4.9.3
 outcome==1.3.0.post0
+passlib==1.7.4
 Pillow==10.1.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.40
 psycopg2-binary==2.9.9
+pyasn1==0.5.1
+pycparser==2.21
 pydantic==2.4.2
 pydantic_core==2.10.1
 PySocks==1.7.1
 python-crontab==3.0.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-jose==3.3.0
+python-multipart==0.0.9
 pytz==2024.1
 redis==5.0.1
 requests==2.31.0
+rsa==4.9
 selenium==4.10.0
 sentry-sdk==1.40.3
 six==1.16.0
