fix: try fix background tasks, remove ports for redis

--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -76,8 +76,8 @@ services:
   redis_db:
     image: redis:latest
     restart: on-failure
-    ports:
-      - 6379:6379
+    # ports:
+    #   - 6379:6379
     env_file:
       - ./.env
     command: redis-server --requirepass ${REDIS_PASSWORD} --appendonly yes --replica-read-only no
