fix: set cpu limit for celery_worker

--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -102,6 +102,10 @@ services:
       driver: "json-file"
       options:
           max-size: "20m"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.2'
 
   celery_beat:
     build: .
