--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -84,17 +84,17 @@ services:
     volumes:
       - redis_data:/data
 
-  rabbitmq3:
-    image: rabbitmq:management
-    ports:
-      - '5672:5672'
-      - '15672:15672'
-    volumes:
-      - rabbitmq_data:/var/lib/rabbitmq
-    logging:
-      driver: "json-file"
-      options:
-          max-size: "20m"
+  # rabbitmq3:
+  #   image: rabbitmq:management
+  #   ports:
+  #     - '5672:5672'
+  #     - '15672:15672'
+  #   volumes:
+  #     - rabbitmq_data:/var/lib/rabbitmq
+  #   logging:
+  #     driver: "json-file"
+  #     options:
+  #         max-size: "20m"
 
   celery_worker:
     build: .
@@ -110,7 +110,7 @@ services:
     depends_on:
       - redis_db
       - psql_db
-      - rabbitmq3
+      # - rabbitmq3
     logging:
       driver: "json-file"
       options:
@@ -130,11 +130,19 @@ services:
       - redis_db
       - psql_db
       - celery_worker
-      - rabbitmq3
+      # - rabbitmq3
     logging:
       driver: "json-file"
       options:
           max-size: "20m"
+
+  flower:
+    build: .
+    command: sh -c 'celery -A project flower'
+    volumes:
+      - flower_data:/data
+    ports:
+      - 5555:5555
 
   psql_db:
     image: postgres:14
@@ -152,6 +160,7 @@ volumes:
   selenium-data:
   postgres-data:
   redis_data:
-  rabbitmq_data:
+  # rabbitmq_data:
+  flower_data:
   static:
   media:
