--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -73,34 +73,34 @@ services:
       options:
           max-size: "20m"
 
-  redis_db:
-    image: redis:latest
-    restart: on-failure
-    # ports:
-    #   - 6379:6379
-    env_file:
-      - ./.env
-    command: redis-server --requirepass ${REDIS_PASSWORD} --appendonly yes --replica-read-only no --maxmemory 200mb --maxmemory-policy allkeys-lru
-    volumes:
-      - redis_data:/data
-
-  # rabbitmq3:
-  #   image: rabbitmq:management
-  #   ports:
-  #     - '5672:5672'
-  #     - '15672:15672'
+  # redis_db:
+  #   image: redis:latest
+  #   restart: on-failure
+  #   # ports:
+  #   #   - 6379:6379
+  #   env_file:
+  #     - ./.env
+  #   command: redis-server --requirepass ${REDIS_PASSWORD} --appendonly yes --replica-read-only no --maxmemory 200mb --maxmemory-policy allkeys-lru
   #   volumes:
-  #     - rabbitmq_data:/var/lib/rabbitmq
-  #   logging:
-  #     driver: "json-file"
-  #     options:
-  #         max-size: "20m"
+  #     - redis_data:/data
+
+  rabbitmq3:
+    image: rabbitmq:management
+    ports:
+      - '5672:5672'
+      - '15672:15672'
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+    logging:
+      driver: "json-file"
+      options:
+          max-size: "20m"
 
   celery_worker:
     build: .
     pull_policy: build
     restart: on-failure
-    command: sh -c 'celery -A project worker -l info -c 8 -Ofair'
+    command: sh -c 'celery -A project worker -l info -c 20 -Ofair'
     environment:
       - POSTGRES_HOST=psql_db
       - SELENIUM_DRIVER=firefox
