--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -47,14 +47,14 @@ services:
     command: sh -c "python manage.py makemigrations &&
                     python manage.py migrate &&
                     python manage.py collectstatic --no-input &&
-                    python manage.py loaddata media/base_db.json &&
-                    python manage.py loaddata media/countries.json &&
-                    python manage.py create_periodic_task_for_delete_reviews &&
-                    python manage.py create_cities &&
-                    python manage.py create_moderator_group &&
-                    python manage.py periodic_task_for_parse_cash_courses &&
-                    python manage.py createsuperuser --no-input &&
                     uvicorn project.asgi:app --host 0.0.0.0"
+                    # python manage.py loaddata media/base_db.json &&
+                    # python manage.py loaddata media/countries.json &&
+                    # python manage.py create_periodic_task_for_delete_reviews &&
+                    # python manage.py create_cities &&
+                    # python manage.py create_moderator_group &&
+                    # python manage.py periodic_task_for_parse_cash_courses &&
+                    # python manage.py createsuperuser --no-input &&
                     # python manage.py parse_reviews_selenium &&
 
   nginx:
@@ -104,7 +104,7 @@ services:
     build: .
     pull_policy: build
     restart: on-failure
-    command: sh -c 'celery -A project worker -l info -c 20 -Ofair'
+    command: sh -c 'celery -A project worker -l info -Ofair --autoscale=20,4'
     environment:
       - POSTGRES_HOST=psql_db
       - SELENIUM_DRIVER=firefox
