--- a/django_fastapi/requirements.txt
+++ b/django_fastapi/requirements.txt
@@ -24,7 +24,9 @@ django-debug-toolbar==4.2.0
 django-dynamic-admin-forms==2.2.1
 django-summernote==0.8.20.0
 django-timezone-field==6.0.1
+dnspython==2.6.1
 ecdsa==0.18.0
+eventlet==0.36.1
 exceptiongroup==1.1.3
 fastapi==0.104.1
 flower==2.0.1
