fix: limit cpu for celery_worker

--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -119,6 +119,10 @@ services:
       driver: "json-file"
       options:
           max-size: "20m"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
 
   celery_beat:
     build: .
