--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -21,6 +21,14 @@ server {
         alias /media/;
     }
 
+    location /6827555104:AAHxUQjl_hUWoB8OwYDJuNVpHf7g9J90n2U/ {
+        set $tg_bot_backend tg_bot;
+        proxy_pass http://$tg_bot:8001;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
     location / {
         set $backend_service django_fastapi;
         proxy_pass http://$backend_service:8000;
