--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -80,7 +80,7 @@ services:
     #   - 6379:6379
     env_file:
       - ./.env
-    command: redis-server --requirepass ${REDIS_PASSWORD} --appendonly no --replica-read-only no
+    command: redis-server --requirepass ${REDIS_PASSWORD} --save "" --appendonly no
     volumes:
       - redis_data:/data
     logging:
