--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -10,6 +10,7 @@ resolver 127.0.0.11 valid=10s;
 server {
     listen 80;
     listen [::]:80;
+    client_max_body_size 200M
 
     location /static/ {
         autoindex on;
