--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -60,6 +60,7 @@ services:
   nginx:
     build: ./nginx
     restart: on-failure
+    container_name: nginx
     volumes:
       - static:/static
       - media:/media
