--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -22,6 +22,14 @@ server {
         alias /media/;
     }
 
+    location /bot_api/ {
+        set $bot_api_service bot;
+        proxy_pass http://$bot_api_service:8001;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
 
     location / {
         set $backend_service django_fastapi;
