--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -30,7 +30,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /webhook/ {
+    location /webhook {
         set $bot_api_service bot;
         proxy_pass http://$bot_api_service:8001;
         proxy_set_header Host $http_host;
