fix: edit nginx config

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -22,7 +22,7 @@ server {
         alias /media/;
     }
 
-    location /bot_api/ {
+    location /bot_api {
         set $bot_api_service bot;
         proxy_pass http://$bot_api_service:8001;
         proxy_set_header Host $http_host;
