--- a/django_fastapi/Dockerfile
+++ b/django_fastapi/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /app
 
 COPY requirements.txt requirements.txt
 
+RUN python3 -m pip install --upgrade pip
 RUN pip3 install --upgrade setuptools
 RUN pip3 install -r requirements.txt
 
