--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -1,101 +1,173 @@
 services:
 
-  firefox:
-    image: selenium/standalone-firefox:4.16.1-20231219
-    restart: on-failure
-    container_name: firefox
-    shm_size: 2g
-    ports:
-      - "4444:4444"
-      - "7900:7900"
-    networks:
-      - common-network
-    volumes:
-      - selenium-data:/home/seluser/Downloads
-    environment:
-      - SE_SESSION_REQUEST_TIMEOUT=3600
-      - SE_NODE_SESSION_TIMEOUT=3600
-      - SE_VNC_PASSWORD=1234
-      - SE_NODE_OVERRIDE_MAX_SESSIONS=true 
-      - SE_NODE_MAX_SESSIONS=5
-    deploy:
-      resources:
-        limits:
-          cpus: '0.4'
+  # firefox:
+  #   image: selenium/standalone-firefox:4.16.1-20231219
+  #   restart: on-failure
+  #   container_name: firefox
+  #   shm_size: 2g
+  #   ports:
+  #     - "4444:4444"
+  #     - "7900:7900"
+  #   networks:
+  #     - common-network
+  #   volumes:
+  #     - selenium-data:/home/seluser/Downloads
+  #   environment:
+  #     - SE_SESSION_REQUEST_TIMEOUT=3600
+  #     - SE_NODE_SESSION_TIMEOUT=3600
+  #     - SE_VNC_PASSWORD=1234
+  #     - SE_NODE_OVERRIDE_MAX_SESSIONS=true 
+  #     - SE_NODE_MAX_SESSIONS=5
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         cpus: '0.4'
 
-  django_fastapi:
-    build: .
-    pull_policy: build
-    restart: on-failure
-    networks:
-      - common-network
-    environment:
-      - POSTGRES_HOST=psql_db
-      - SELENIUM_DRIVER=firefox
-      - REDIS_HOST=redis_db
-    env_file:
-      - ./.env
-    # container_name: django_fastapi
-    depends_on:
-      - psql_db
-      # - redis_db
-      # - celery_worker
-      - firefox
-    logging:
-      driver: "json-file"
-      options:
-          max-size: "20m"
-    volumes:
-      - static:/app/staticfiles
-      - media:/app/media
-    command: sh -c "python manage.py makemigrations &&
-                    python manage.py migrate &&
-                    python manage.py collectstatic --no-input &&
-                    uvicorn project.asgi:app --host 0.0.0.0"
-                    # python manage.py loaddata media/base_db.json &&
+  # django_fastapi:
+  #   build: .
+  #   pull_policy: build
+  #   restart: on-failure
+  #   networks:
+  #     - common-network
+  #   environment:
+  #     - POSTGRES_HOST=psql_db
+  #     - SELENIUM_DRIVER=firefox
+  #     - REDIS_HOST=redis_db
+  #   env_file:
+  #     - ./.env
+  #   # container_name: django_fastapi
+  #   depends_on:
+  #     - psql_db
+  #     - prometheus
+  #     # - celery_worker
+  #     # - firefox
+  #   logging:
+  #     driver: "json-file"
+  #     options:
+  #         max-size: "20m"
+  #   ports:
+  #    - "8000:8000"
+  #   volumes:
+  #     - static:/app/staticfiles
+  #     - media:/app/media
+  #   command: sh -c "python manage.py makemigrations &&
+  #                   python manage.py migrate &&
+  #                   python manage.py collectstatic --no-input &&
+  #                   python manage.py loaddata media/base_db.json &&
+  #                   uvicorn project.asgi:app --host 0.0.0.0 --port 8000"
+                    # gunicorn -w 4 -k uvicorn.workers.UvicornWorker project.asgi:app"
+                    # python manage.py createsuperuser --no-input &&
                     # python manage.py loaddata media/countries.json &&
                     # python manage.py create_periodic_task_for_delete_reviews &&
                     # python manage.py create_cities &&
                     # python manage.py create_moderator_group &&
                     # python manage.py periodic_task_for_parse_cash_courses &&
-                    # python manage.py createsuperuser --no-input &&
                     # python manage.py parse_reviews_selenium &&
 
-  nginx:
-    build: ./nginx
-    restart: on-failure
-    container_name: nginx
-    networks:
-      - common-network
-    volumes:
-      - static:/static
-      - media:/media
-    ports:
-      # - '81:80'
-      - '80:80'
-    depends_on:
-      - django_fastapi
-    logging:
-      driver: "json-file"
-      options:
-          max-size: "20m"
+  # nginx:
+  #   build: ./nginx
+  #   restart: on-failure
+  #   container_name: nginx
+  #   networks:
+  #     - common-network
+  #   volumes:
+  #     - static:/static
+  #     - media:/media
+  #   ports:
+  #     - '81:80'
+  #     # - '80:80'
+  #   depends_on:
+  #     - django_fastapi
+  #   logging:
+  #     driver: "json-file"
+  #     options:
+  #         max-size: "20m"
 
-  redis_db:
-    image: redis:latest
-    restart: on-failure
-    networks:
-      - common-network
-    # ports:
-    #   - 6379:6379
-    env_file:
-      - ./.env
-    command: redis-server --requirepass ${REDIS_PASSWORD} --save "" --appendonly no
+  # redis_db:
+  #   image: redis:latest
+  #   restart: on-failure
+  #   networks:
+  #     - common-network
+  #   # ports:
+  #   #   - 6379:6379
+  #   env_file:
+  #     - ./.env
+  #   command: redis-server --requirepass ${REDIS_PASSWORD} --save "" --appendonly no
+  #   volumes:
+  #     - redis_data:/data
+  #   logging:
+  #     driver: "json-file"
+  #     options:
+  #         max-size: "20m"
+
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
     volumes:
-      - redis_data:/data
-    logging:
-      driver: "json-file"
-      options:
-          max-size: "20m"
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    # networks:
+    #   - common-network
+    # network_mode: host
+    depends_on:
+      - postgres-exporter
+
+
+  postgres-exporter:
+    image: quay.io/prometheuscommunity/postgres-exporter
+    environment:
+      DATA_SOURCE_NAME: "postgresql://postgres:22222@localhost:6432/test_db?sslmode=disable"
+      PG_EXPORTER_EXTEND_QUERY_PATH: '/etc/postgres-exporter/queries.yaml'
+    ports:
+      - "9187:9187"
+    volumes:
+      - ./queries.yaml:/etc/postgres-exporter/queries.yaml
+    # depends_on:
+    #   - psql_db
+    # networks:
+    #   - common-network
+    # network_mode: host
+
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
+    # networks:
+    #   - common-network
+    # network_mode: host
+
+
+  # pgbouncer:
+  #   image: edoburu/pgbouncer
+  #   container_name: pgbouncer
+  #   environment:
+  #     DB_USER: postgres
+  #     DB_PASSWORD: 22222
+  #     DB_NAME: test_db
+  #     DB_PORT: 6432
+  #     DB_HOST: localhost
+  #     AUTH_TYPE: trust
+  #     DB_CONNECT: "dbname=test_db host=localhost user=postgres password=22222"
+  #   ports:
+  #     - "6432:6432"
+  pgbouncer:
+    image: edoburu/pgbouncer:1.17.0
+    ports:
+      - "6432:6432"
+    environment:
+      DB_CONNECT: "dbname=test_db host=localhost user=postgres password=22222"
+      POOL_MODE: transaction
+      ADMIN_USERS: my-project
+      MAX_CLIENT_CONN: 1000
+      AUTH_TYPE: plain
+    # network_mode: host
+    # depends_on:
+    #   - postgres
 
   # rabbitmq3:
   #   image: rabbitmq:management
@@ -109,78 +181,83 @@ services:
   #     options:
   #         max-size: "20m"
 
-  celery_worker:
-    build: .
-    pull_policy: build
-    restart: on-failure
-    networks:
-      - common-network
-    command: sh -c 'celery -A project worker -l info -c 20 -Ofair'
-    environment:
-      - POSTGRES_HOST=psql_db
-      - SELENIUM_DRIVER=firefox
-      - REDIS_HOST=redis_db
-    env_file:
-      - ./.env
-    depends_on:
-      - redis_db
-      - psql_db
-      # - rabbitmq3
-    logging:
-      driver: "json-file"
-      options:
-          max-size: "20m"
+  # celery_worker:
+  #   build: .
+  #   pull_policy: build
+  #   restart: on-failure
+  #   networks:
+  #     - common-network
+  #   command: sh -c 'celery -A project worker -l info -c 20 -Ofair'
+  #   environment:
+  #     - POSTGRES_HOST=psql_db
+  #     - SELENIUM_DRIVER=firefox
+  #     - REDIS_HOST=redis_db
+  #   env_file:
+  #     - ./.env
+  #   depends_on:
+  #     - redis_db
+  #     - psql_db
+  #     # - rabbitmq3
+  #   logging:
+  #     driver: "json-file"
+  #     options:
+  #         max-size: "20m"
 
 
-  celery_beat:
-    build: .
-    pull_policy: build
-    restart: on-failure
-    networks:
-      - common-network
-    command: sh -c 'celery -A project beat -l INFO --scheduler django_celery_beat.schedulers:DatabaseScheduler'
-    environment:
-      - POSTGRES_HOST=psql_db
-      - REDIS_HOST=redis_db
-    env_file:
-      - ./.env
-    depends_on:
-      - redis_db
-      - psql_db
-      - celery_worker
-      # - rabbitmq3
-    logging:
-      driver: "json-file"
-      options:
-          max-size: "20m"
+  # celery_beat:
+  #   build: .
+  #   pull_policy: build
+  #   restart: on-failure
+  #   networks:
+  #     - common-network
+  #   command: sh -c 'celery -A project beat -l INFO --scheduler django_celery_beat.schedulers:DatabaseScheduler'
+  #   environment:
+  #     - POSTGRES_HOST=psql_db
+  #     - REDIS_HOST=redis_db
+  #   env_file:
+  #     - ./.env
+  #   depends_on:
+  #     - redis_db
+  #     - psql_db
+  #     - celery_worker
+  #     # - rabbitmq3
+  #   logging:
+  #     driver: "json-file"
+  #     options:
+  #         max-size: "20m"
 
-  flower:
-    build: .
-    command: sh -c 'celery -A project flower'
-    networks:
-      - common-network
-    environment:
-      - POSTGRES_HOST=psql_db
-      - SELENIUM_DRIVER=firefox
-      - REDIS_HOST=redis_db
-    env_file:
-      - ./.env
-    volumes:
-      - flower_data:/data
-    ports:
-      - '5554:5555'
+  # flower:
+  #   build: .
+  #   command: sh -c 'celery -A project flower'
+  #   networks:
+  #     - common-network
+  #   environment:
+  #     - POSTGRES_HOST=psql_db
+  #     - SELENIUM_DRIVER=firefox
+  #     - REDIS_HOST=redis_db
+  #   env_file:
+  #     - ./.env
+  #   volumes:
+  #     - flower_data:/data
+  #   ports:
+  #     - '5554:5555'
 
   psql_db:
     image: postgres:14
     restart: on-failure
-    networks:
-      - common-network
-    ports:
-      - '5432:5432'
+    # networks:
+    #   - common-network
+    # ports:
+    #   - '5432:5432'
+    environment:
+      POSTGRES_MAX_CONNECTIONS: '1000'
     env_file:
       - ./.env
+
+    command: postgres -c shared_preload_libraries=pg_stat_statements -c pg_stat_statements.track=all -c max_connections=200
     volumes:
       - postgres-data:/var/lib/postgresql/data
+      - ./init:/docker-entrypoint-initdb.d
     logging:
       driver: "json-file"
       options:
@@ -195,6 +272,6 @@ volumes:
   static:
   media:
 
-networks:
-  common-network:
-    driver: bridge
+# networks:
+#   common-network:
+#     driver: bridge
