--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -25,7 +25,7 @@ server {
     location /send_mass_message {
         set $bot_api_service bot;
         proxy_pass http://$bot_api_service:8001;
-        proxy_set_header Host $http_host;
+        proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
@@ -38,6 +38,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+
+    location /metrics {
+        set $backend_service django_fastapi;
+        proxy_pass http://$backend_service:8000/metrics;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 
     location / {
         set $backend_service django_fastapi;
