--- a/django_fastapi/requirements.txt
+++ b/django_fastapi/requirements.txt
@@ -8,6 +8,7 @@ bcrypt==4.1.2
 beautifulsoup4==4.12.2
 billiard==4.2.0
 bleach==6.1.0
+bottle==0.12.25
 celery==5.3.5
 certifi==2023.7.22
 cffi==1.16.0
@@ -16,31 +17,45 @@ click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
+CProfileV==1.0.7
 cron-descriptor==1.4.0
 cryptography==42.0.5
 Django==4.2.7
 django-celery-beat==2.5.0
 django-debug-toolbar==4.2.0
 django-dynamic-admin-forms==2.2.1
+django-prometheus==2.3.1
 django-summernote==0.8.20.0
 django-timezone-field==6.0.1
 dnspython==2.6.1
 ecdsa==0.18.0
+email_validator==2.2.0
 eventlet==0.36.1
 exceptiongroup==1.1.3
-fastapi==0.104.1
+fastapi==0.111.1
+fastapi-cli==0.0.4
 flower==2.0.1
 gevent==23.9.1
 greenlet==3.0.2
+gunicorn==22.0.0
 h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
 humanize==4.9.0
 idna==3.4
+Jinja2==3.1.4
 jsmin==3.0.1
 kombu==5.3.3
 lxml==4.9.3
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
 outcome==1.3.0.post0
+packaging==24.1
 passlib==1.7.4
 Pillow==10.1.0
+prometheus-fastapi-instrumentator==7.0.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.40
 psycopg2-binary==2.9.9
@@ -48,6 +63,7 @@ pyasn1==0.5.1
 pycparser==2.21
 pydantic==2.4.2
 pydantic_core==2.10.1
+Pygments==2.18.0
 PySocks==1.7.1
 python-crontab==3.0.0
 python-dateutil==2.8.2
@@ -55,27 +71,34 @@ python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.9
 pytz==2024.1
+PyYAML==6.0.1
 redis==5.0.1
 requests==2.31.0
+rich==13.7.1
 rsa==4.9
 selenium==4.10.0
 sentry-sdk==1.40.3
+shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.5
 sqlparse==0.4.4
-starlette==0.27.0
+starlette==0.37.2
 tornado==6.4
 trio==0.24.0
 trio-websocket==0.11.1
+typer==0.12.3
 typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.7
-uvicorn==0.24.0.post1
+uvicorn==0.30.1
+uvloop==0.19.0
 vine==5.1.0
+watchfiles==0.22.0
 wcwidth==0.2.9
 webencodings==0.5.1
+websockets==12.0
 wsproto==1.2.0
 zope.event==5.0
 zope.interface==6.1
