--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -51,7 +51,8 @@ services:
     command: sh -c "python manage.py makemigrations &&
                     python manage.py migrate &&
                     python manage.py collectstatic --no-input &&
-                    uvicorn project.asgi:app --host 0.0.0.0"
+                    gunicorn -w 4 -k uvicorn.workers.UvicornWorker project.asgi:app"
+                    # uvicorn project.asgi:app --host 0.0.0.0"
                     # python manage.py loaddata media/base_db.json &&
                     # python manage.py loaddata media/countries.json &&
                     # python manage.py create_periodic_task_for_delete_reviews &&
