--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -51,8 +51,8 @@ services:
     command: sh -c "python manage.py makemigrations &&
                     python manage.py migrate &&
                     python manage.py collectstatic --no-input &&
+                    python manage.py create_popular_directions_group &&
                     gunicorn -w 4 -k uvicorn.workers.UvicornWorker project.asgi:app --bind 0.0.0.0:8000"
-                    # python manage.py create_popular_directions_group &&
                     # python manage.py loaddata media/base_db.json &&
                     # python manage.py loaddata media/countries.json &&
                     # python manage.py create_periodic_task_for_delete_reviews &&
