--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -51,7 +51,8 @@ services:
     command: sh -c "python manage.py makemigrations &&
                     python manage.py migrate &&
                     python manage.py collectstatic --no-input &&
-                    gunicorn -w 4 -k uvicorn.workers.UvicornWorker project.asgi:app --bind 0.0.0.0:8000"
+                    # uvicorn project.asgi:app --host 0.0.0.0"
+                    # gunicorn -w 4 -k uvicorn.workers.UvicornWorker project.asgi:app --bind 0.0.0.0:8000"
                     # python manage.py loaddata media/base_db.json &&
                     # python manage.py loaddata media/countries.json &&
                     # python manage.py create_popular_directions_group &&
@@ -61,7 +62,6 @@ services:
                     # python manage.py periodic_task_for_parse_cash_courses &&
                     # python manage.py createsuperuser --no-input &&
                     # python manage.py parse_reviews_selenium &&
-                    # uvicorn project.asgi:app --host 0.0.0.0"
 
   nginx:
     build: ./nginx
