fix: edit redis in docker compose file

--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -91,7 +91,8 @@ services:
     #   - 6379:6379
     env_file:
       - ./.env
-    command: redis-server --requirepass ${REDIS_PASSWORD} --save "" --appendonly no
+    command: sh -c "echo 1 > /proc/sys/vm/overcommit_memory && redis-server --requirepass ${REDIS_PASSWORD} --save 900 1 --loglevel warning --appendonly no"
+    # sh -c "echo 1 > /proc/sys/vm/overcommit_memory && redis-server --save 900 1 --loglevel warning"
     volumes:
       - redis_data:/data
     logging:
