--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -139,7 +139,7 @@ services:
       resources:
         limits:
           cpus: '2.0'
-          memory: 2GiB
+          memory: 2g
 
 
   celery_beat:
