--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -50,9 +50,8 @@ services:
       - media:/app/media
     command: sh -c "python manage.py makemigrations &&
                     python manage.py migrate &&
-                    python manage.py collectstatic --no-input &&
                     gunicorn -w 4 -k uvicorn.workers.UvicornWorker project.asgi:app --bind 0.0.0.0:8000"
-                    # uvicorn project.asgi:app --host 0.0.0.0"
+                    # python manage.py collectstatic --no-input &&
                     # python manage.py loaddata media/base_db.json &&
                     # python manage.py loaddata media/countries.json &&
                     # python manage.py create_popular_directions_group &&
@@ -62,6 +61,7 @@ services:
                     # python manage.py periodic_task_for_parse_cash_courses &&
                     # python manage.py createsuperuser --no-input &&
                     # python manage.py parse_reviews_selenium &&
+                    # uvicorn project.asgi:app --host 0.0.0.0"
 
   nginx:
     build: ./nginx
@@ -186,7 +186,7 @@ services:
       - ./.env
     volumes:
       - postgres-data:/var/lib/postgresql/data
-    command: postgres -c max_connections=200
+    command: postgres -c max_connections=2000
     logging:
       driver: "json-file"
       options:
