--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -120,7 +120,7 @@ services:
     restart: on-failure
     networks:
       - common-network
-    command: sh -c 'celery -A project worker -l info -c 20'
+    command: sh -c 'celery -A project worker -l info -c 4'
     environment:
       - POSTGRES_HOST=psql_db
       - SELENIUM_DRIVER=firefox
@@ -135,6 +135,10 @@ services:
       driver: "json-file"
       options:
           max-size: "20m"
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
 
 
   celery_beat:
