--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -50,8 +50,8 @@ services:
       - media:/app/media
     command: sh -c "python manage.py makemigrations &&
                     python manage.py migrate &&
+                    python manage.py create_periodic_task_for_parse_actual_course &&
                     gunicorn -w 4 -k uvicorn.workers.UvicornWorker project.asgi:app --bind 0.0.0.0:8000"
-                    # python manage.py create_periodic_task_for_parse_no_cash_course &&
                     # python manage.py collectstatic --no-input &&
                     # python manage.py loaddata media/base_db.json &&
                     # python manage.py loaddata media/countries.json &&
