--- a/django_fastapi/requirements.txt
+++ b/django_fastapi/requirements.txt
@@ -23,6 +23,7 @@ click-repl==0.3.0
 cron-descriptor==1.4.0
 cryptography==42.0.5
 Django==4.2.7
+django-admin-action-forms==1.2.1
 django-celery-beat==2.5.0
 django-debug-toolbar==4.2.0
 django-dynamic-admin-forms==2.2.1
