feat: add Direction signal for create reverse Direction test: open port for django_fastapi service

--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -27,6 +27,8 @@ services:
     build: .
     pull_policy: build
     restart: on-failure
+    ports:
+     - '8000:8000'
     networks:
       - common-network
     environment:
