fix: add again ssl certificate

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -13,8 +13,8 @@ server {
     listen 443;
     listen [::]:443;
 
-    # ssl_certificate     /etc/nginx/certs/cert.pem;
-    # ssl_certificate_key /etc/nginx/certs/key.pem;
+    ssl_certificate     /etc/nginx/certs/cert.pem;
+    ssl_certificate_key /etc/nginx/certs/key.pem;
 
     client_max_body_size 200M;
 
