fix: edit recreate background tasks test: add ssl directive to nginx config

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -10,8 +10,8 @@ resolver 127.0.0.11 valid=10s;
 server {
     listen 80;
     listen [::]:80;
-    listen 443;
-    listen [::]:443;
+    listen 443 ssl;
+    # listen [::]:443;
 
     ssl_certificate     /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
