fix/test: add expire value to static and media files into nginx config

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -21,11 +21,15 @@ server {
     location /static/ {
         autoindex on;
         alias /static/;
+        expires 30d;
+        add_header Cache-Control "public, max-age=2592000";
     }
 
     location /media/ {
         autoindex on;
         alias /media/;
+        expires 30d;
+        add_header Cache-Control "public, max-age=2592000";
     }
 
     location /send_mass_message {
