test: test nginx config with separated servers for subdomains

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -155,7 +155,7 @@ server {
 
 
 server {
-    server_name www.app.moneyswap.online;
+    server_name app.moneyswap.online;
     
     listen 80;
     listen [::]:80;
