test: test subdamain in nginx config

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -201,3 +201,26 @@ server {
         add_header X-Served-By "nginx-moneyswap" always;
     }
 }
+
+server {
+    server_name test.moneyswap.online;
+    
+    listen 80;
+    listen [::]:80;
+    listen 443 ssl;
+    # listen [::]:443;
+
+    ssl_certificate     /etc/nginx/certs/cert.pem;
+    ssl_certificate_key /etc/nginx/certs/key.pem;
+
+    client_max_body_size 200M;
+
+    location / {
+        proxy_pass https://moneyswap-nextjs-2h2kz47v9-t-apps.vercel.app/;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        add_header X-Served-By "nginx-moneyswap" always;
+    }
+}
