fix/test: edit nginx config

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -20,8 +20,12 @@ server {
 
     client_max_body_size 200M;
 
+    # location /favicon.ico {
+    #     return 301 /static/general_models/favicon.ico;
+    # }
+
     location /favicon.ico {
-        return 301 /static/general_models/favicon.ico;
+        return 301 https://api.moneyswap.online/static/general_models/favicon.ico;
     }
 
     location /static/ {
